--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -647,6 +647,13 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE=y
+CONFIG_CPU_FREQ_GOV_BADASS_2_PHASE_FREQ=918000
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
+CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
+CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL=y
+# CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
