--- a/arch/arm/configs/doubleshot_defconfig
+++ b/arch/arm/configs/doubleshot_defconfig
@@ -646,6 +646,12 @@ CONFIG_CPU_FREQ_GOV_LAZY=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_LAGFREE_MAX_LOAD=50
+CONFIG_LAGFREE_MIN_LOAD=15
+CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=192000
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=15
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
