--- a/build
+++ b/build
@@ -14,6 +14,11 @@ echo Writing configs ...
 make doubleshot_defconfig | tee -a build_log.txt
 echo >> build_log.txt
 make -j3 | tee -a build_log.txt
+if [ ! -f arch/arm/boot/zImage ];
+then
+    echo An error occured in the build process, aborting...
+        exit 1
+fi
 echo Copying files and making flashable
 cp -f arch/arm/boot/zImage flashable/zip/kernel/zImage
 find -iname "*.ko" -exec cp {} flashable/zip/system/lib/modules/ \;
